# mstdlib

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.cmake  Doxyfile.in  LICENSE  Makefile.am  Makefile.am.doxygen  Makefile.msc  README.md  annotated.html  annotated.js  annotated_dup.js  appveyor.yml  buildclean.sh  buildconf.sh  classes.html  config.h.cmake  config.w32.h  configure.ac  dir_00070d739ffbaafdff8b3f90dd540ebc.html  dir_0137f1be5615ff1aba5a948f83a09bac.html  dir_031f61c33603d41b850d8b453fe541c6.html  dir_1dd611c5a65829a40f7b98b3c9ef9b39.html  dir_2f462b3ded6843bb7a56daffa0d62391.html  dir_339610ecc71d7ce7314bd6b35c841e3a.html  dir_5493b62903dfb46fc177a51087c10595.html  dir_74d9e2e400e9e331880f7e32aa9c915c.html  dir_773d512f0982a2b4971deb2688782761.html  dir_783acf310e7994032d5f0ed9cac27ea1.html  dir_83479f3e62efc9ab117abb614c65a425.html  dir_8b08b365657cbeea6de5ec9ffcb313a1.html  dir_8ba460fe04f9756591afb4c119c26fbb.html  dir_92e1763d806361614a8d863a690e1501.html  dir_a4978744522068604823c107062e0240.html  dir_bd30234bf01902eb9ad4e605ac30b03a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d91ec4ce07a01256be7124080436a165.html  dir_ec653c3ef0565c9b3863025d78d5ac7b.html  (+406 more)
backtrace/: CMakeLists.txt  m_backtrace.c  m_backtrace_int.h  m_backtrace_unx.c  m_backtrace_win.c
base/: CMakeLists.txt  Makefile.am  Makefile.msc  m_defs_int.h
base/bincodec/: m_base32.c  m_base32.h  m_base64.c  m_base64.h  m_bincodec.c  m_bincodec_conv.c  m_bincodec_conv.h  m_hex.c  m_hex.h
base/cache/: m_cache.c  m_cache_strvp.c
base/data/: m_bin.c  m_bit_buf.c  m_bit_parser.c  m_bitlist.c  m_buf.c  m_chr.c  m_getopt.c  m_getopt_int.h  m_getopt_parse.c  m_parser.c  m_parser_int.h  m_queue.c  m_state_machine.c  m_str.c  m_str_fmt.c  m_str_hexdump.c  m_str_num.c  m_str_patmatch.c  m_utf8.c  m_utf8_case.c  m_utf8_check.c  m_utf8_int.h  m_utf8_tables.c
base/fs/: m_fs.c  m_fs_dir.c  m_fs_dir_entries.c  m_fs_dir_entry.c  m_fs_dir_walk.c  m_fs_file.c  m_fs_file_unx.c  m_fs_file_win.c  m_fs_info.c  m_fs_info_unx.c  m_fs_info_win.c  m_fs_int.h  m_fs_int_mac.h  m_fs_int_unx.h  m_fs_int_win.h  m_fs_mac.m  m_fs_path.c  m_fs_path_norm.c  m_fs_perms.c  m_fs_perms_unx.c  m_fs_perms_win.c  m_fs_progress.c  m_fs_unx.c  m_fs_win.c
base/hash/: m_hash_dict.c  m_hash_func.c  m_hash_multi.c  m_hash_strbin.c  m_hash_stridx.c  m_hash_stru64.c  m_hash_strvp.c  m_hash_u64bin.c  m_hash_u64str.c  m_hash_u64u64.c  m_hash_u64vp.c  m_hashtable.c
base/list/: m_list.c  m_list_bin.c  m_list_str.c  m_list_u64.c  m_llist.c  m_llist_bin.c  m_llist_str.c  m_llist_u64.c
base/math/: m_bithacks.c  m_decimal.c  m_float.c  m_operator.c  m_prop.c  m_rand.c  m_round.c
base/mem/: m_endian.c  m_mem.c
base/platform/: m_platform.h  m_platform_unx.c  m_platform_win.c  m_platform_win.h
base/sort/: m_sort_binary.c  m_sort_compar.c  m_sort_mergesort.c  m_sort_qsort.c
base/textcodec/: m_textcodec.c  m_textcodec_ascii.c  m_textcodec_buffer.c  m_textcodec_cp037.c  m_textcodec_cp1250.c  m_textcodec_cp1251.c  m_textcodec_cp1252.c  m_textcodec_cp1253.c  m_textcodec_cp1254.c  m_textcodec_cp1255.c  m_textcodec_cp1256.c  m_textcodec_cp1257.c  m_textcodec_cp1258.c  m_textcodec_cp500.c  m_textcodec_cp874.c  m_textcodec_cp_map.c  m_textcodec_int.h  m_textcodec_iso88591.c  m_textcodec_iso88592.c  m_textcodec_iso8859_1.c  m_textcodec_iso8859_10.c  m_textcodec_iso8859_11.c  m_textcodec_iso8859_13.c  m_textcodec_iso8859_14.c  m_textcodec_iso8859_15.c  m_textcodec_iso8859_16.c  m_textcodec_iso8859_2.c  m_textcodec_iso8859_3.c  m_textcodec_iso8859_4.c  m_textcodec_iso8859_5.c  m_textcodec_iso8859_6.c  m_textcodec_iso8859_7.c  m_textcodec_iso8859_8.c  m_textcodec_iso8859_9.c  m_textcodec_percent.c  m_textcodec_punycode.c
base/time/: m_time.c  m_time_elapsed.c  m_time_gm.c  m_time_int.h  m_time_local.c  m_time_parse.c  m_time_tz_dst_rules.c  m_time_tz_olson.c  m_time_tz_olson_transitions.c  m_time_tz_posix.c  m_time_tz_rule.c  m_time_tzs.c  (+1 more)
formats/: CMakeLists.txt  Makefile.am  Makefile.msc
include/: CMakeLists.txt  Makefile.am
io/: CMakeLists.txt  Makefile.am  Makefile.msc  m_dns.c  m_dns_int.h  m_event.c  m_event_epoll.c  m_event_int.h  m_event_kqueue.c  m_event_poll.c  m_event_timer.c  m_event_trigger.c  m_event_win32-ng.c  m_event_win32.c  m_io.c  m_io_ble.c  m_io_ble_int.h  m_io_ble_mac.h  m_io_ble_mac.m  m_io_ble_mac_cache.m  m_io_ble_mac_manager.h  m_io_ble_mac_manager.m  m_io_ble_mac_scan.m  m_io_ble_mac_scanner.h  m_io_ble_mac_scanner.m  m_io_ble_notimpl.c  m_io_ble_rdata.c  m_io_ble_wcomplete.c  m_io_block.c  m_io_bluetooth.c  m_io_bluetooth_android.c  m_io_bluetooth_int.h  m_io_bluetooth_ios.m  m_io_bluetooth_ios_ea.m  m_io_bluetooth_mac.h  m_io_bluetooth_mac.m  m_io_bluetooth_mac_rfcomm.h  m_io_bluetooth_mac_rfcomm.m  m_io_bluetooth_notimpl.c  m_io_buffer.c  (+49 more)
log/: CMakeLists.txt  Makefile.am  Makefile.msc  m_async_writer.c  m_log.c  m_log_android.c  m_log_common.c  m_log_file.c  m_log_int.h  m_log_membuf.c  m_log_nslog.c  m_log_nslog_sys.h  m_log_nslog_sys.m  m_log_stream.c  m_log_syslog.c  m_log_tcp_syslog.c
net/: CMakeLists.txt  m_net.c  m_net_http_simple.c  m_net_iface_ips.c  m_net_int.h  m_net_smtp.c  smtp_cli.c
sql/: CMakeLists.txt  Makefile.am  m_module.c  m_sql_connpool.c  m_sql_driver_helper.c  m_sql_error.c  m_sql_int.h  m_sql_query.c  m_sql_report.c  m_sql_stmt.c  m_sql_stmt_bind.c  m_sql_stmt_result.c  m_sql_table.c  m_sql_tabledata.c  m_sql_trace.c  m_sql_trans.c
test/: CMakeLists.txt  Makefile.am
text/: CMakeLists.txt  Makefile.am
thread/: CMakeLists.txt  LINUX_CGROUPS.md  Makefile.am  Makefile.msc  m_atomic.c  m_pollemu.c  m_pollemu.h  m_popen.c  m_thread.c  m_thread_attr.c  m_thread_coop.c  m_thread_int.h  m_thread_pipeline.c  m_thread_pthread.c  m_thread_rwlock_emu.c  m_thread_tls.c  m_thread_win.c  m_threadpool.c
tls/: CMakeLists.txt  Makefile.am  Makefile.msc  m_tls.c  m_tls_certs.c  m_tls_clientctx.c  m_tls_clientctx_int.h  m_tls_ctx_common.c  m_tls_ctx_common.h  m_tls_hostvalidate.c  m_tls_hostvalidate.h  m_tls_serverctx.c  m_tls_serverctx_int.h  ossl3_compat.c  ossl3_compat.h
(+1251 files in other folders)
